# incremental-3d-convex-hull

./: .gitignore  AUDIT_SECURITE_V5.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MEMO_TECHNIQUE_V5.md  Makefile  README.md  README_EN.md  ROADMAP.md  VALIDATION_V4.md  app.py  hull_engine.py  incremental_hull_engine.py  pipeline_v5.py  pyproject.toml  requirements-large.txt  requirements.txt  storage.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/imports/: points_exemple.xlsx
docs/: PUBLICATION_GITHUB.md
examples/sample_run/: final_faces.csv  final_vertices.csv  metrics.json  report.md
scripts/: generate_and_process.sh  run_example.sh
sql/: README.md
tests/: test_generation.py  test_historical_engine.py  test_hull_engine.py  test_pipeline_v5.py
